syntax = "proto3";
package fitness_aggregator;

option go_package = "https://gitlab.com/purposeless-lab/monorepo/fitness-aggregator/server/api/proto";

import "google/protobuf/any.proto";

message Status {
  int32 code = 1;
  string message = 2;
  repeated google.protobuf.Any details = 3;
}
